Upgraded to Java 25